--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.mybookstore">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -10,10 +11,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Activities.CategoryAvtivity"></activity>
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".Activities.SearchActivity"></activity>
+        <activity android:name=".Activities.ItemActivity" />
+        <activity android:name=".Activities.ItemCatActivity" />
+        <activity android:name=".Activities.BasketActivity" />
+        <activity android:name=".Activities.ShowActivity" />
+        <activity android:name=".Activities.CategoryActivity" />
         <activity android:name=".Activities.EditInformation" />
-        <activity android:name=".Activities.ActivityProfile" />
+        <activity android:name=".Activities.ProfileActivity" />
         <activity android:name=".Activities.RegisterActivity" />
         <activity android:name=".Activities.LoginActivity" />
         <activity
