--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,6 @@ dependencies {
     implementation 'net.schmizz:sshj:0.10.0'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.jetbrains:annotations-java5:15.0'
+
+    implementation 'com.github.medyo:android-about-page:1.2.5'
 }
