--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
-    implementation 'com.squareup.picasso:picasso:2.6.0-SNAPSHOT'
+    implementation 'com.squareup.picasso:picasso:2.5.1'
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.nex3z:notification-badge:1.0.2'
     implementation 'com.ss.bannerslider:bannerslider:1.2'
@@ -55,5 +55,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'org.jetbrains:annotations-java5:15.0'
 
+    implementation 'com.github.ome450901:SimpleRatingBar:1.4.3'
     implementation 'com.github.medyo:android-about-page:1.2.5'
 }
