--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,15 @@
         android:roundIcon="@mipmap/ic_launcher_samed"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".Activities.FavoriteActivity"></activity>
+        <activity android:name=".Activities.FullProductActivity"></activity>
+        <activity android:name=".Activities.CatActivity_ViewPager" />
+        <activity
+            android:name=".Activities.ForgetPassActivity"
+            android:windowSoftInputMode="adjustResize|stateHidden" />
+        <activity android:name=".Activities.BannerActivity" />
+        <activity android:name=".Activities.FavoriteActivity" />
         <activity android:name=".Activities.AboutActivity" />
         <activity android:name=".Activities.SendCommentActivity" />
         <activity android:name=".Activities.SplashActivity">
