--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,5 @@ dependencies {
 
     implementation 'com.github.ome450901:SimpleRatingBar:1.4.3'
     implementation 'com.github.medyo:android-about-page:1.2.5'
+    implementation 'com.pnikosis:materialish-progress:1.7'
 }
